--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -6,6 +6,7 @@
 * {
     margin: 0;
     padding: 0;
+    
    
 }
 
@@ -178,6 +179,7 @@
     margin-top: -40px;
     background-color: rgba(0, 0, 0, 0.8);
     height: 80px;
+    z-index: 100000;
     
 }
 
@@ -589,12 +591,17 @@
    
 } */
 
-.banner-slider1 {
+/* .banner-slider1 {
     width: screen;
-    height: 100%; /* Ensure it has a set height */
+    height: 100%;
     align-items: center;
     position: relative;
-    
+} */
+.banner-slider1 {
+    width: 100%;
+    height: static;
+    background-size: cover;
+    background-position: center;
 }
 
 .banner-slider1 img{
@@ -609,13 +616,24 @@
 
 
 
-.banner-slider1-content{
+/* .banner-slider1-content{
     width: 614px;
     height: 434px;
     margin-top: 220px;
     margin-left: 380px;
     position: relative;
+} */
+.banner-slider1-content {
+    position: absolute;
+    margin-top: 220px;
+    margin-left: 380px;
+    color: white;
+    z-index: 10;
+    max-width: 80%;
+   
 }
+
+
 @media (max-width:1800px){
     .banner-slider1-content{
         margin-left: 360px;
@@ -662,8 +680,6 @@
         height: 400px;
         margin-top: 200px;
         margin-left: 190px;
-        position: relative;
-        
     }
 }
 @media (max-width:970px){
@@ -672,7 +688,6 @@
         height: 400px;
         margin-top: 200px;
         margin-left: 290px;
-        position: relative;
         
     }
 }
@@ -682,7 +697,6 @@
         height: 400px;
         margin-top: 200px;
         margin-left: 250px;
-        position: relative;
         
     }
 }
@@ -692,8 +706,7 @@
         height: 400px;
         margin-top: 200px;
         margin-left: 225px;
-        position: relative;
-        
+
     }
 }
 
@@ -976,3 +989,5 @@ position: relative;
     width: 100px;
     color: #FFFFFF;
 }
+
+
