--- a/src/component/serviceoffered/HybridAppDevelopment/About.css
+++ b/src/component/serviceoffered/HybridAppDevelopment/About.css
@@ -31,7 +31,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
+    border-radius: 0px;
 }
 
 @media (max-width: 750px){
@@ -44,7 +44,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 0px !important;
 }
 @media (max-width: 750px){
     .About-img img{object-fit: contain;}
@@ -71,8 +71,8 @@
     .About-content{width: 95%;}
 }
 
-.About-content-heading{
-    width: 100%;
+.About-content-heading-Hybrid{
+    width: 70%;
     height: static;
     font-family: Raleway;
     font-weight: 700;
@@ -80,8 +80,11 @@
     line-height: 37.57px;
     letter-spacing: 0%;
 }
+@media (max-width: 740px){
+    .About-content-heading-Hybrid{width: 100%;}
+}
 
-.About-content-heading span{
+.About-content-heading-Hybrid span{
     color:#ED1651;
 }
 
