--- a/src/component/serviceoffered/HybridAppDevelopment/solution.css
+++ b/src/component/serviceoffered/HybridAppDevelopment/solution.css
@@ -17,14 +17,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
 }
 
 
 .solution-box-header{
     height: static;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 .solution-box-header1{
+    width: 100%;
     font-family: Raleway;
     font-weight: 600;
     font-size: 40px;
@@ -37,17 +43,23 @@
 }
 
 .solution-box-header2{
+    width: 80%;
     font-family: Raleway;
 font-weight: 600;
 font-size: 14px;
 line-height: 21.74px;
 letter-spacing: 0%;
 text-align: center;
+
 }
 
-.solution-box-line{
-    width: 100%;
-}
+.solution-box-line {
+    width: 76%;
+    height: 1px;
+    background-color: #ff0101;
+    margin-bottom: 20px;
+  }
+  
 
 .solution-box-content{
     width: 100%;
@@ -69,7 +81,7 @@ text-align: center;
     align-items: center;
     position: relative;
     gap: 20px;
-    border-radius: 20px;
+    border-radius: 0px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     
 }
@@ -86,7 +98,7 @@ text-align: center;
     height: 100%;
     object-fit: cover;
     position: absolute;
-    border-radius: 20px;
+    border-radius: 0px;
 }
 
 .solution-box-content1-logo{
@@ -106,10 +118,10 @@ text-align: center;
 }
 
 .solution-box-content1-footer{
-    width: 80%;
+    width: 45%;
     font-family: Raleway;
     font-weight: 700;
-    font-size: 28px;
+    font-size: 22px;
     line-height: 25.4px;
     letter-spacing: 0%;
     text-align: center;
@@ -118,4 +130,5 @@ text-align: center;
     position: absolute;
     z-index: 3;
     transform: translateY(40px);
+    border: 2px solid rgba(255, 0, 0, 0);
 }
