--- a/src/component/Homepage/developmentprocess.css
+++ b/src/component/Homepage/developmentprocess.css
@@ -10,65 +10,28 @@
    gap:1rem;
    background-color: #f8f8f8; 
    justify-content: center;
-}
-
-@media (max-width:920px){
-    .dp-body{
-        height: 1000px;
-    }
-}
-
-@media (max-width:879px){
-    .dp-body{
-        height: 1200px;
-    }
-}
-
-@media (max-width:650px){
-    .dp-body{
-        height: 1100px;
-    }
-}
-
-
-@media (max-width:556px){
-    .dp-body{
-        height: 1700px;
-    }
+   height: static;
 }
 
 .dp-header-box{
     width: screen;
-    height: 150pxpx;
+    height: static;
     display: flex;
     justify-content: center;
-    /* border: 5px solid violet; */
 }
 .dp-header{
-    /* border: 2px solid green; */
     display: flex;
     flex-direction: column;
-    gap:1rem;
+    gap:20px;
     width: 65%;
-    height: 150px;
+    height: static;
     margin-top: 50px;
 }
-@media (max-width:700px){
+@media (max-width:920px){
     .dp-header{
-        height: 90px;
-        
+        width: 90%
     }
 }
-
-@media (max-width:660px){
-    .dp-header{
-        height: 70px;
-        
-    }
-}
-
-
-
 .dp-header1{
     font-family: Raleway;
     font-size: 18px;
@@ -89,16 +52,11 @@
 
 .dp-header2{
     width: 100%;
-height: 123px;
-/* border: 2px solid yellow; */
 font-family: Raleway;
 font-size: 45px;
 font-weight: 700;
-line-height: 52.83px;
 text-align: left;
 text-decoration-skip-ink: none;
-
-
 }
 
 
@@ -108,122 +66,57 @@ text-decoration-skip-ink: none;
     }
 }
 
-@media (max-width:700px){
-    .dp-header2{
-        font-size: 20px;
-        
-    }
-}
-
-
-@media (max-width:660px){
-    .dp-header2{
-        font-size: 18px;
-        
-    }
-}
-
-
-@media (max-width:580px){
-    .dp-header2{
-        font-size: 15px;
-        
-    }
-}
-
-@media (max-width:490px){
-    .dp-header2{
-        font-size: 12px;
-        
-    }
-}
-
 .dp-content-body{
-   
-    /* border: 2px solid blue; */
     width: screen;
-    
     display: flex;
     justify-content: center;
-    
+    padding-inline: 40px;
 }
 
 .dp-content-box{
-    /* border: 2px solid rgb(11, 189, 202); */
-    width: calc(80%);
-    max-width: 1600px;
+    width: 1500px;
     height: 640px auto;
     border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.219);
-    background-color: white;
-}
-
-@media (max-width:920px){
-    .dp-content-box{
-        height: 700px;
-    }
-}
-
-@media (max-width:879px){
-    .dp-content-box{
-        height: 900px;
-    }
-}
-
-
-@media (max-width:650px){
-    .dp-content-box{
-        height: 900px;
-    }
-}
-
-@media (max-width:556px){
-    .dp-content-box{
-        height: 1500px;
-    }
-}
-
-.dp-content{
-    /* border: 2px solid salmon; */
-    width: 100%;
-    max-width: 1000px;
-    padding-top: 3rem;
-    padding-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
-/* Make images responsive */
-.dp-content ul li img {
-    max-width: 100%;
-    height: 7rem;
-}
-
-.dp-content ul {
-    /* border: 2px solid red; */
-    width: 100%;
-    max-width: 1000px;
-    height: auto;
-    display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     gap: 80px;
-    padding-bottom: 0px;
-    padding-left: 0;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.219);
+    background-color: white;
+    padding-block: 100px;
+    padding-inline: 40px;
 }
 
-.dp-content ul li{
+.dp-content-box1{
+    height: 140px;
+    width: 250px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 180px;
-    height: 137px;
-    /* border: 2px solid green; */
+    gap: 10px;
+}
+
+.dp-content-box1-image{
+    width: 100%;
+    height: 70px;
+}
+
+.dp-content-box1-image img {
+    width: 100%;
+    height: 100%;
+    filter: invert(13%) sepia(100%) saturate(7485%) hue-rotate(359deg) brightness(103%) contrast(80%);
+}
 
 
+.dp-content-box1-head{
+    width: 100%;
+    font-family: Raleway;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: #ED1C24;
+    text-align: center;
 }
