--- a/src/component/servicewedo/requirement.css
+++ b/src/component/servicewedo/requirement.css
@@ -15,7 +15,7 @@
 .your-requirement {
     width: 100%;
     text-align: center;
-    /* margin-bottom: 20px; */
+    margin-bottom: 40px;
 }
 
 .your-requirement h1 {
@@ -45,35 +45,38 @@
 /* Input fields */
 .row-req input {
     width: 100% !important;
-    padding-block: 40px; /* Adjusted to prevent excessive height */
+    padding-block: 0px; /* Adjusted to prevent excessive height */
     border: none;
     border-bottom: 1px solid #ED1C24 !important; /* Ensure red underline */
     background: transparent;
     font-size: 18px;
-    color: #303030;
+    color: #818080;
     outline: none;
+    margin: 20px;
 }
 
 .row-req .mob{
-    width: 47% !important;
+    width: 43% !important;
 }
 
 
 /* Placeholder styling */
 .row-req input::placeholder {
     font-family: Raleway, sans-serif;
-    font-weight: 500;
+    font-weight: 0;
     font-size: 18px;
-    color: #ED1C24;
+    color: #fd6d71;
 }
 
 /* Section title (Select Requirements) */
 .select-req {
     width: 100%;
     padding-block: 10px;
+
 }
 .select-req{
     margin-top: 40px;
+    margin-left: 20px;
 }
 .select-req p {
     font-family: Raleway, sans-serif;
