--- a/src/component/serviceoffered/GraphicDesigning/about.css
+++ b/src/component/serviceoffered/GraphicDesigning/about.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap');
 
-.About-body{
+.about-body{
     width: screen;
     height: static;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #ffffff !important;
     padding-block: 80px;
 }
 
