--- a/src/component/Homepage/wecando.css
+++ b/src/component/Homepage/wecando.css
@@ -15,25 +15,15 @@ body {
 
 .wecando-box{
     width: 100%;
+    height: static;
     
     
-}
-@media (max-width: 1400px){
-    .wecando-box{
-        margin-top: -200px;
-    }
-}
-
-@media (max-width: 900px){
-    .wecando-box{
-        margin-top: 80px;
-    }
 }
 
 .wecando-body{
     background-color: #f8f8f8;
     height: 1100px;
-    border:#ED1C24;
+    border:#ED1C24;height: static;
 }
 
 .wecando {
@@ -48,7 +38,7 @@ body {
     justify-content: center;
     /* background-color: #f8f8f8; */
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 20px;height: static;
 }
 
 @keyframes fadeIn {
@@ -68,31 +58,20 @@ body {
     font-family: Raleway;
     font-size: 50px;
     font-weight: 700;
-    line-height: 58.7px;
     text-align: left;
-    text-decoration-skip-ink: none;
-    animation: fadeIn 1s ease-in-out 0.5s forwards;   
     display: flex;
     justify-content: center;
-    width: 540px;
-    height: 59px;
-}
+    align-items: center;
+    height: static !important;
 
-@media (max-width: 1060px) {
-    .wecando-header1 h4 {
-        flex-wrap: wrap;
-        width: 300px;
-        height: 120px;
-    
-    margin-top: -65px;
-    }
+    width: 100% !important;
 }
 
 
 
-@media (max-width: 390px) {
+@media (max-width: 520px) {
     .wecando-header1 h4 {
-       font-size: 45px;
+       font-size: 30px !important;
     }
 }
 
@@ -103,9 +82,10 @@ body {
 
 .wecando-header2{
     width: 100% !important;
-    height: 22px;
+    height: static;
     display: flex;
     justify-content: center;
+    align-items: center;
     
 }
 
@@ -114,42 +94,13 @@ body {
 font-size: 16px;
 font-weight: 400;
 line-height: 21.82px;
-text-align: left;
+text-align: center !important;
 text-decoration-skip-ink: none;
-}
-
-@media (max-width: 1500px) {
-    .wecando-header2 h2 {
-   
-    }
-}
-
-@media (max-width: 1360px) {
-    .wecando-header2 h2 {
-  
-    }
 }
 
 @media (max-width: 1060px) {
     .wecando-header2 h2 {
     width:380px;
-    height: 80px;
-    margin-top:-20px;
-    }
-}
-
-@media (max-width: 660px) {
-    .wecando-header2 h2 {
-       
-        
-    }
-}
-
-
-@media (max-width: 400px) {
-    .wecando-header2 h2 {
-        
-
     }
 }
 
@@ -264,7 +215,7 @@ text-decoration-skip-ink: none;
 
 .li {
     width: 380px;
-    height: 380px;
+    height: static;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -279,6 +230,7 @@ text-decoration-skip-ink: none;
     padding-top: 50px;
 margin-top: 20px;
 gap: 20px;
+ margin: 0 auto !important;
 }
 
 @media (max-width: 390px) {
@@ -305,6 +257,8 @@ gap: 20px;
     margin: 0;
     list-style: none;
     justify-content: center;
+    margin: 0 auto !important;
+    height: static;
    
     
 }
@@ -328,7 +282,7 @@ gap: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     opacity: 0;
-    animation: fadeIn 1s ease-in-out 1s forwards;
+    animation: fadeIn 1s ease-in-out 1s forwards; margin: 0 auto !important;
     
     
 }
