--- a/src/component/servicewedo/offerings.css
+++ b/src/component/servicewedo/offerings.css
@@ -90,6 +90,7 @@ text-align: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 40px;
+    margin: 0 auto;
     
 }
 
@@ -103,8 +104,6 @@ text-align: center;
     gap: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    opacity: 0;
-    animation: fadeIn 1s ease-in-out 1s forwards;
 }
 .offerings-box-content1:hover{
     border: 1px solid #ED1C24;
@@ -164,7 +163,6 @@ text-align: center;
 .offerings-box-content1-footer ul li a{
     text-decoration: none;
     color: black;
-    transition: color 0.2s ease-in-out;
 }
 
 .offerings-box-content1-footer ul li a:hover{
