--- a/src/component/commonpage/Topmenu.css
+++ b/src/component/commonpage/Topmenu.css
@@ -1,15 +1,144 @@
-/* .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000 !important ;
-    background: rgba(255, 255, 255, 0.9);
-    padding: 10px 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background 0.3s ease-in-out;
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+.navmenu-latest{
+    height: static;
+    width: 55%;
+    margin-right: 140px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-bottom: -15px;
 }
 
-.sticky {
-    background: rgba(255, 255, 255, 1);
-} */
+@media (max-width:1750px){
+    .navmenu-latest{
+        width: 55%;
+        margin-right: 150px;
+    }
+}
+@media (max-width:1680px){
+    .navmenu-latest{
+        width: 53%;
+        margin-right: 120px;
+    }
+}
+@media (max-width:1680px){
+    .navmenu-latest{
+        width: 55%;
+        margin-right: 120px;
+    }
+}
+@media (max-width:1550px){
+    .navmenu-latest{
+        width: 55%;
+        margin-right: 85px;
+    }
+}
+@media (max-width:1450px){
+    .navmenu-latest{
+        width: 65%;
+    }
+}
+@media (max-width:1300px){
+    .navmenu-latest{
+        display: none;
+    }
+}
+
+.nav{
+    z-index: 100000;
+   
+    padding-bottom: 20px ;margin-top: -15px;
+}
+
+.nav a{
+    font-size: 18px;
+    font-family: Plus Jakarta Sans;
+    text-decoration: none;
+    color: #ffff;
+    transition: 0.3s ease-in-out;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+@media (max-width:1590px){
+    .nav a{
+        font-size: 16px;
+    }
+}
+
+
+
+.nav a::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: #ED1C24;
+    
+    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.nav a:hover::after {
+    width: 100%;
+    left: 0;
+}
+
+
+
+/* main drop down box start*/
+.services-dropdown{
+    position: absolute;
+    display: block;
+    background-color: #ffff;
+    margin-top: 50px;
+    border-radius: 10px;
+    padding-block: 10px;
+    z-index: 200;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 5px;
+    z-index: 500;
+    display: none;
+}
+
+.nav a:hover{
+    color: #ED1C24;
+}
+.nav:hover .services-dropdown{
+    display: block;
+    position: absolute;
+    
+}
+
+
+
+.services-dropdown1{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-family: Roboto;
+    font-size: 16px;
+    width: 100%;
+    height: 40px;
+    padding-inline: 20px;
+    padding-right: 40px;
+    transition:0.3s ease-in-out;
+}
+
+.services-dropdown1:hover{
+    background-color: rgba(128, 128, 128, 0.37);
+    cursor: pointer;
+    color: #ED1C24;
+   
+}
